force-app/main/default/objects/DC_Note__c/DC_Note__c.object-meta.xml
<CustomObject>
    <label>Dr/Cr Note</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Voucher No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dr/Cr Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>