force-app/main/default/objects/DC_Note__c/fields/Customer_Party__c.field-meta.xml
<CustomField>
    <fullName>Customer_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer/Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DCNotes</relationshipName>
    <type>Lookup</type>
</CustomField>