force-app/main/default/objects/DC_Note__c/fields/Delivery_Term__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Term__c</fullName>
    <label>Delivery Term</label>
    <length>20</length>
    <type>Text</type>
</CustomField>