force-app/main/default/objects/DC_Note__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>TextArea</type>
</CustomField>