force-app/main/default/objects/DC_Note__c/fields/Dispatch_Address__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Address__c</fullName>
    <formula>Customer_Party__r.ShippingStreet + BR() +
Customer_Party__r.ShippingCity + &quot;, &quot;+
Customer_Party__r.ShippingState +&quot; &quot; +
Customer_Party__r.ShippingPostalCode + BR() +
Customer_Party__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Address</label>
    <type>Text</type>
</CustomField>