force-app/main/default/objects/DC_Note__c/fields/Dispatch_No__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_No__c</fullName>
    <label>Dispatch No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>