force-app/main/default/objects/DC_Note__c/fields/ESN_No__c.field-meta.xml
<CustomField>
    <fullName>ESN_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ESN No.</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>DCNotes</relationshipName>
    <type>Lookup</type>
</CustomField>