force-app/main/default/objects/DC_Note__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipName>Db_Cr_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>