force-app/main/default/objects/DC_Note__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRN</label>
    <referenceTo>MRN__c</referenceTo>
    <relationshipName>DCNotes</relationshipName>
    <type>Lookup</type>
</CustomField>