force-app/main/default/objects/DC_Note__c/fields/Reverse_Charge__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Charge__c</fullName>
    <label>Reverse Charge</label>
    <length>20</length>
    <type>Text</type>
</CustomField>