force-app/main/default/objects/DC_Note__c/fields/Sales_Officer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DCNotes</relationshipName>
    <type>Lookup</type>
</CustomField>