force-app/main/default/objects/DC_Note__c/fields/Sales_Order_Return__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Return__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order Return</label>
    <referenceTo>Sales_Order_Return__c</referenceTo>
    <relationshipLabel>DC Notes</relationshipLabel>
    <relationshipName>DCNotes</relationshipName>
    <type>Lookup</type>
</CustomField>