force-app/main/default/objects/DC_Note__c/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Db_Cr_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>