force-app/main/default/objects/DC_Note__c/fields/Supply_Meant_for_Export_on_payment_IGST__c.field-meta.xml
<CustomField>
    <fullName>Supply_Meant_for_Export_on_payment_IGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply Meant for Export on payment(IGST)</label>
    <type>Checkbox</type>
</CustomField>