force-app/main/default/objects/DC_Note__c/fields/Transportation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Mode__c</fullName>
    <label>Transportation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>By Hand</fullName>
            </value>
            <value>
                <fullName>By Air</fullName>
            </value>
            <value>
                <fullName>By Road</fullName>
            </value>
            <value>
                <fullName>By Ship</fullName>
            </value>
            <value>
                <fullName>By Train</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>