force-app/main/default/objects/DC_Note__c/recordTypes/Debit_Note.recordType-meta.xml
<RecordType>
    <fullName>Debit_Note</fullName>
    <active>true</active>
    <label>Debit Note</label>
</RecordType>