force-app/main/default/objects/DC_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Customer_Party__c</columns>
    <columns>ESN_No__c</columns>
    <columns>MRN__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>